--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "login-tutorial",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "start": "node .",
+    "dev": "nodemon ./src/index.js"
   },
   "keywords": [],
   "author": "",
